--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "typescript": "^4.9.5",
     "vite": "^4.3.0",
     "webpack": "^5.80.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "three": "^0.156.0"
   },
   "peerDependencies": {
     "three": ">=0.151.0"
