--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "copy-pkg-json-webpack-plugin": "^0.0.40",
     "copy-webpack-plugin": "^11.0.0",
     "gh-pages": "^5.0.0",
-    "three": "^0.156.0",
     "ts-loader": "^9.4.2",
-    "typedoc": "^0.25.1",
     "typescript": "^4.9.5",
     "vite": "^4.3.0",
     "webpack": "^5.80.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "three": "^0.156.0",
+    "typedoc": "^0.25.1"
   },
   "peerDependencies": {
     "three": ">=0.151.0"
