--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "main": "bundle.js",
   "types": "index.d.ts",
+  "homepage": "https://agargaro.github.io/three.ez",
   "repository": "https://github.com/agargaro/three.ez",
   "keywords": [
     "three",
@@ -23,23 +24,24 @@
     "publish-beta": "npm version prerelease --preid=beta --git-tag-version false && npx webpack && cd build && npm publish --tag beta --access public",
     "publish-patch": "npm version patch --git-tag-version false && npx webpack && cd build && npm publish --access public",
     "publish-minor": "npm version minor --git-tag-version false && npx webpack && cd build && npm publish --access public",
-    "publish-major": "npm version major --git-tag-version false && npx webpack && cd build && npm publish --access public",
-    "deploy": "gh-pages -d dist"
+    "publish-major": "npm version major --git-tag-version false && npx webpack && cd build && npm publish --access public"
   },
   "devDependencies": {
     "@types/three": "^0.156.0",
     "copy-pkg-json-webpack-plugin": "^0.0.40",
     "copy-webpack-plugin": "^11.0.0",
-    "gh-pages": "^5.0.0",
+    "three": "^0.156.0",
     "ts-loader": "^9.4.2",
+    "typedoc": "^0.25.1",
     "typescript": "^4.9.5",
     "vite": "^4.3.0",
     "webpack": "^5.80.0",
-    "webpack-cli": "^5.0.1",
-    "three": "^0.156.0",
-    "typedoc": "^0.25.1"
+    "webpack-cli": "^5.0.1"
   },
   "peerDependencies": {
     "three": ">=0.151.0"
+  },
+  "dependencies": {
+    "remove-files-webpack-plugin": "^1.5.0"
   }
 }
