docs: add docs and typedoc support (#10)
* docs: add docusaurus docs web app and auto generated api files by typedoc

Co-authored-by: agargaro <devgargaro@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"target": "ES2020",
 		"strict": true,
 		"noImplicitOverride": true,
+		"moduleResolution":"node",
 		"declaration": true,
 		"strictNullChecks": false,
 		"stripInternal": true,
