--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@three.ez/main",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Simplify three.js development, including events, drag & drop, binding, focus management, smart rendering, tweening and more.",
   "author": "agargaro",
   "license": "MIT",
@@ -36,12 +36,10 @@
     "typescript": "^4.9.5",
     "vite": "^4.3.0",
     "webpack": "^5.80.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "remove-files-webpack-plugin": "^1.5.0"
   },
   "peerDependencies": {
     "three": ">=0.151.0"
-  },
-  "dependencies": {
-    "remove-files-webpack-plugin": "^1.5.0"
   }
 }
