Package.json updated

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "drag & drop",
     "smart rendering",
     "multiple views",
-    "tweening",
+    "tween",
     "focus & blur",
     "binding"
   ],
