--- a/docs/docs/tutorial/getting-started/_category_.yml
+++ b/docs/docs/tutorial/getting-started/_category_.yml
@@ -2,4 +2,4 @@ label: "Gettings Started"
 position: 1
 link:
   type: generated-index
-  description: TODO.
+  description: Everything you need to know before you start.
