--- a/docs/package.json
+++ b/docs/package.json
@@ -19,14 +19,19 @@
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "^1.6.22",
+    "@three.ez/main": "^0.1.3",
+    "@types/three": "^0.156.0",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "three": "^0.156.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.15",
     "@docusaurus/module-type-aliases": "2.4.1",
     "@tsconfig/docusaurus": "^1.0.5",
+    "docusaurus-plugin-module-alias": "^0.0.2",
     "docusaurus-plugin-typedoc": "^0.20.1",
     "typedoc": "^0.25.1",
     "typedoc-plugin-markdown": "^3.16.0",
