--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@three.ez/main",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Simplify three.js development, including events, drag & drop, binding, focus management, smart rendering, tweening and more.",
   "author": "agargaro",
   "license": "MIT",
@@ -22,10 +22,10 @@
     "binding"
   ],
   "scripts": {
-    "publish-beta": "npm version prerelease --preid=beta --git-tag-version false && npx webpack && cd build && npm publish --tag beta --access public",
-    "publish-patch": "npm version patch --git-tag-version false && npx webpack && cd build && npm publish --access public",
-    "publish-minor": "npm version minor --git-tag-version false && npx webpack && cd build && npm publish --access public",
-    "publish-major": "npm version major --git-tag-version false && npx webpack && cd build && npm publish --access public"
+    "publish-beta": "npm version prerelease --preid=beta --git-tag-version false && npx webpack && cd publish && npm publish --tag beta --access public",
+    "publish-patch": "npm version patch --git-tag-version false && npx webpack && cd publish && npm publish --access public",
+    "publish-minor": "npm version minor --git-tag-version false && npx webpack && cd publish && npm publish --access public",
+    "publish-major": "npm version major --git-tag-version false && npx webpack && cd publish && npm publish --access public"
   },
   "devDependencies": {
     "@types/three": "^0.156.0",
@@ -37,8 +37,7 @@
     "typescript": "^4.9.5",
     "vite": "^4.3.0",
     "webpack": "^5.80.0",
-    "webpack-cli": "^5.0.1",
-    "remove-files-webpack-plugin": "^1.5.0"
+    "webpack-cli": "^5.0.1"
   },
   "peerDependencies": {
     "three": ">=0.151.0"
