--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@three.ez/main",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "Simplify three.js development, including events, drag & drop, binding, focus management, smart rendering, tweening and more.",
   "author": "agargaro",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "threejs",
     "interaction",
     "events",
+    "event system",
     "drag and drop",
     "smart rendering",
     "multiple views",
@@ -32,10 +33,10 @@
     "pack": "npm pack publish"
   },
   "devDependencies": {
-    "@types/three": "^0.156.0",
+    "@types/three": "^0.158.0",
     "copy-pkg-json-webpack-plugin": "^0.0.40",
     "copy-webpack-plugin": "^11.0.0",
-    "three": "^0.156.1",
+    "three": "^0.158.0",
     "ts-loader": "^9.4.4",
     "typedoc": "^0.25.1",
     "typescript": "^5.2.2",
