--- a/docs/package.json
+++ b/docs/package.json
@@ -28,6 +28,7 @@
     "three": "^0.156.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.15",
     "@docusaurus/module-type-aliases": "2.4.3",
     "@tsconfig/docusaurus": "^2.0.1",
     "docusaurus-plugin-typedoc": "^0.20.1",
