--- a/packages/Interaction/package.json
+++ b/packages/Interaction/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@three.ez/interaction",
   "version": "0.0.1",
-  "description": "TODO.",
+  "description": "Enhance 3D scene interactions with events, drag & drop, and focus management. Simplify three.js development with ease.",
   "author": "agargaro",
   "license": "MIT",
   "main": "bundle.js",
@@ -13,9 +13,14 @@
     "three.js",
     "threejs",
     "3d",
-    "InstancedMesh",
-    "frustum culling",
-    "instance management"
+    "interaction",
+    "events",
+    "event system",
+    "drag and drop",
+    "smart rendering",
+    "focus management",
+    "helper",
+    "toolkit"
   ],
   "scripts": {
     "publish-beta": "npm version prerelease --preid=beta --git-tag-version false && npx webpack && cd publish && npm publish --tag beta --access public",
