--- a/packages/Interaction/tsconfig.json
+++ b/packages/Interaction/tsconfig.json
@@ -10,9 +10,6 @@
 		"stripInternal": true,
 		"outDir": "build",
 		"esModuleInterop": true,
-		"noImplicitAny": false,
-		"paths": {
-			"@three.ez/view-manager": ["../ViewManager/src"]
-		}
+		"noImplicitAny": false
 	}
 }
