feat: add shiny-guacamole, still not work

--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
   },
   "peerDependencies": {
     "three": ">=0.151.0"
+  },
+  "dependencies": {
+    "shiny-guacamole": "^0.0.1-alfa.0"
   }
 }
