Switch to vite build

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "@three.ez/main",
   "version": "0.5.4",
   "description": "Simplify three.js development, including events, drag & drop, binding, focus management, smart rendering, tweening and more.",
-  "author": "agargaro",
+  "author": "Andrea Gargaro <devgargaro@gmail.com>",
   "license": "MIT",
-  "main": "bundle.js",
+  "type": "module",
+  "module": "index.js",
+  "main": "index.umd.cjs",
   "types": "index.d.ts",
   "homepage": "https://agargaro.github.io/three.ez",
   "repository": "https://github.com/agargaro/three.ez",
@@ -27,31 +29,23 @@
     "query"
   ],
   "scripts": {
-    "publish-beta": "npm version prerelease --preid=beta --git-tag-version false && npx webpack && cd publish && npm publish --tag beta --access public",
-    "publish-patch": "npm version patch --git-tag-version false && npx webpack && cd publish && npm publish --access public",
-    "publish-minor": "npm version minor --git-tag-version false && npx webpack && cd publish && npm publish --access public",
-    "publish-major": "npm version major --git-tag-version false && npx webpack && cd publish && npm publish --access public",
-    "build": "npx webpack",
-    "start": "npx vite",
-    "pack": "npm pack publish",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage"
+    "start": "vite",
+    "build": "vite build",
+    "clean": "npx rimraf dist",
+    "publish-patch": "npm version patch --git-tag-version false && npm run build && cd dist && npm publish --access public",
+    "publish-minor": "npm version minor --git-tag-version false && npm run build && cd dist && npm publish --access public",
+    "publish-major": "npm version major --git-tag-version false && npm run build && cd dist && npm publish --access public",
+    "test": "vitest"
   },
   "devDependencies": {
-    "@types/three": "^0.162.0",
-    "@vitest/coverage-v8": "^0.34.6",
-    "copy-pkg-json-webpack-plugin": "^0.0.40",
-    "copy-webpack-plugin": "^11.0.0",
-    "gl": "^6.0.2",
+    "@types/three": "^0.167.1",
     "jsdom": "^22.1.0",
-    "three": "^0.162.0",
-    "ts-loader": "^9.4.4",
-    "typedoc": "^0.25.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.6",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "typescript": "^5.4.2",
+    "vite": "^5.4.0",
+    "vite-plugin-dts": "^3.9.1",
+    "vite-plugin-externalize-deps": "^0.8.0",
+    "vite-plugin-static-copy": "^1.0.6",
+    "vitest": "^0.34.6"
   },
   "peerDependencies": {
     "three": ">=0.151.0"
