--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,16 +1,18 @@
 {
 	"compilerOptions": {
-		"module": "ES2020",
 		"target": "ES2020",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 		"strict": true,
-		"noImplicitOverride": true,
-		"moduleResolution": "node",
 		"declaration": true,
+		"sourceMap": true,
+		"declarationMap": true,
+		"noImplicitOverride": true,
 		"strictNullChecks": false,
 		"stripInternal": true,
-		"outDir": "publish",
+		"outDir": "build",
 		"esModuleInterop": true,
-		"noImplicitAny": false
+		"noImplicitAny": false,
 	},
 	"include": [
 		"src/**/*.ts"
