--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
 	"compilerOptions": {
-		"module": "ES2022",
-		"target": "ES2022",
+		"target": "ES2020",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 		"strict": true,
-		"noImplicitOverride": true,
-		"moduleResolution": "node",
 		"declaration": true,
+		"sourceMap": true,
+		"declarationMap": true,
+		"noImplicitOverride": true,
 		"strictNullChecks": false,
 		"stripInternal": true,
 		"outDir": "build",
 		"esModuleInterop": true,
-		"noImplicitAny": false
+		"noImplicitAny": false,
 	}
 }
