--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "license": "MIT",
   "type": "module",
   "module": "index.js",
-  "main": "index.umd.cjs",
+  "main": "index.cjs",
   "types": "index.d.ts",
   "homepage": "https://agargaro.github.io/three.ez",
   "repository": "https://github.com/agargaro/three.ez",
+  "exports": {
+    ".": {
+      "import": "./index.js",
+      "require": "./index.cjs"
+    }
+  },
   "keywords": [
     "three",
     "three.js",
@@ -32,14 +38,19 @@
     "start": "vite",
     "build": "vite build",
     "clean": "npx rimraf dist",
+    "lint": "npx eslint --fix",
+    "test": "vitest",
     "publish-patch": "npm version patch --git-tag-version false && npm run build && cd dist && npm publish --access public",
     "publish-minor": "npm version minor --git-tag-version false && npm run build && cd dist && npm publish --access public",
-    "publish-major": "npm version major --git-tag-version false && npm run build && cd dist && npm publish --access public",
-    "test": "vitest"
+    "publish-major": "npm version major --git-tag-version false && npm run build && cd dist && npm publish --access public"
   },
   "devDependencies": {
-    "@types/three": "^0.169.0",
+    "@eslint/js": "^9.10.0",
+    "@three.ez/main": "^0.5.8",
+    "@types/three": "^0.170.0",
+    "eslint": "^9.14.0",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0",
     "vite": "^5.4.11",
     "vite-plugin-dts": "^4.3.0",
     "vite-plugin-externalize-deps": "^0.8.0",
