--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,20 +1,7 @@
 {
-	"compilerOptions": {
-		"target": "ES2020",
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
-		"strict": true,
-		"declaration": true,
-		"sourceMap": true,
-		"declarationMap": true,
-		"noImplicitOverride": true,
-		"strictNullChecks": false,
-		"stripInternal": true,
-		"outDir": "build",
-		"esModuleInterop": true,
-		"noImplicitAny": false,
-	},
+	"extends": "./tsconfig.json",
 	"include": [
-		"src/**/*.ts"
+	  "src/**/*.ts"
 	]
-}
+  }
+  
