--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "publish-major": "npm version major --git-tag-version false && npm run build && cd dist && npm publish --access public"
   },
   "devDependencies": {
-    "@eslint/js": "^9.10.0",
+    "@eslint/js": "^9.14.0",
+    "@stylistic/eslint-plugin": "^2.10.1",
     "@three.ez/main": "^0.5.8",
     "@types/three": "^0.170.0",
     "eslint": "^9.14.0",
