--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@three.ez/main",
-  "version": "0.5.8",
+  "version": "0.5.9",
   "description": "Simplify three.js development, including events, drag & drop, binding, focus management, smart rendering, tweening and more.",
   "author": "Andrea Gargaro <devgargaro@gmail.com>",
   "license": "MIT",
@@ -36,8 +36,7 @@
   ],
   "scripts": {
     "start": "vite",
-    "build": "vite build",
-    "clean": "npx rimraf dist",
+    "build": "vite build && tsc --build tsconfig.build.json",
     "lint": "npx eslint --fix",
     "test": "vitest",
     "publish-patch": "npm version patch --git-tag-version false && npm run build && cd dist && npm publish --access public",
@@ -45,7 +44,7 @@
     "publish-major": "npm version major --git-tag-version false && npm run build && cd dist && npm publish --access public"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
+    "@eslint/js": "^9.10.0",
     "@stylistic/eslint-plugin": "^2.10.1",
     "@three.ez/main": "^0.5.8",
     "@types/three": "^0.170.0",
@@ -53,7 +52,6 @@
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0",
     "vite": "^5.4.11",
-    "vite-plugin-dts": "^4.3.0",
     "vite-plugin-externalize-deps": "^0.8.0",
     "vite-plugin-static-copy": "^1.0.6",
     "vitest": "^0.34.6"
